--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -32,6 +32,7 @@
 		.left-panel-nav
 
 
+			+linkLeftPanel("Аккордеон - Вакансии", "accordeon-job.html")
 			+linkLeftPanel("Контакты на странице Профиль", "profile-contacts.html")
 			+linkLeftPanel("Контакты на стр. Профиль", "contacts-for-profile.html")
 			+linkLeftPanel("Иконки", "icons.html")
