--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -31,7 +31,9 @@
 		p.strong Блоки
 		.left-panel-nav
 
-
+			+linkLeftPanel("Форма регистрации", "registration-form.html")
+			+linkLeftPanel("Форма входа в ЛК", "login-form.html")
+			+linkLeftPanel("Восстановление пароля", "password-recover.html")
 			+linkLeftPanel("Контакты на странице Профиль", "profile-contacts.html")
 			+linkLeftPanel("Контакты на стр. Профиль", "contacts-for-profile.html")
 			+linkLeftPanel("Иконки", "icons.html")
