job-page completed

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -66,6 +66,7 @@
 @import "pages/product";
 @import "pages/account-favourite";
 @import "pages/account-profile";
+@import "pages/job";
 
 
 // Utils - Always Last - !IMPORTANT
