--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -186,6 +186,11 @@ blockquote p {
 	overflow: hidden;
 }
 
+.col--no-padding {
+	padding-left: 0 !important;
+	padding-right: 0 !important;
+}
+
 
 
 /***style for sticky-footer***/
