--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -86,5 +86,6 @@
 			+linkLeftPanel("Спасибо за заказ", "../order-processed.html")
 			+linkLeftPanel("Профиль пользователя", "../account-profile.html")
 			+linkLeftPanel("Избранное", "../account-favourite.html")
+			+linkLeftPanel("Вакансии", "../job.html")
 
 #ui-nav-toggle Скрыть/Показать навигацию
