fixed button return in catalog
Кнопка "Вернуться в каталог" теперь закрывает форму.

--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -1,6 +1,6 @@
 .goods-cart {
 	max-height: 80%;
-	overflow-y: scroll;
+	overflow: auto;
 	width: 321px;
 	margin-bottom: 88px;
 	padding-top: 16px;
@@ -46,7 +46,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding-right: 8px;
 	margin-top: -5px;
 	@media @tablet {
 		padding-left: 8px;
