edit checkbos-cursor pointer,font-weight-600 and font-color

--- a/src/less/blocks/_checkbox.less
+++ b/src/less/blocks/_checkbox.less
@@ -160,6 +160,10 @@
 		font-size: 14px;
 	}
 }
+.checkbox,
+.checkbox-label{
+	cursor: pointer;
+}
 .checkbox:focus+.checkbox-custom,
 .checkbox.has-focus+.checkbox-custom {
 	// box-shadow: 0 0 15px 0 @gray;
