--- a/src/pug/pages/ui/password-recover.pug
+++ b/src/pug/pages/ui/password-recover.pug
@@ -9,7 +9,7 @@ block content
 	.container.container--left
 		.title Восстановление пароля
 		.login
-			form.login-form
+			form.login-form.login-form--mb-0
 				.login-form-title.login-form-title--mb-16 Восстановление пароля
 				.login-form-subtitle.login-form-subtitle--mb-20
 					p.login-form-subtitle__text.
