--- a/src/less/blocks/_login-forms.less
+++ b/src/less/blocks/_login-forms.less
@@ -15,10 +15,13 @@
 	margin-bottom: 44px;
 	@media @desktop{margin-bottom: 60px;}
 }
+.login-form--mb-0{
+	margin-bottom: 0;
+}
 .login-form-title{
 	font-size: 24px;
 	text-align: left;
-	font-weight: 700;
+	font-weight: 600;
 	margin-bottom: 10px;
 	@media @desktop{
 		margin-bottom: 16px;
@@ -52,7 +55,7 @@
 }
 .login-form-subtitle__link{
 	color: @order-calc;
-	font-weight: 700;
+	font-weight: 600;
 	text-decoration: none;
 	border-bottom: 1px solid @order-calc;
 	transition: color .5s;
@@ -87,6 +90,7 @@
 	padding-left: 22px;
 	padding-right: 22px;
 	background-color: #fff;
+	color: @textMenu; 
 	position: absolute;
 	left: 50%;
 	top: -16px;	
