--- a/src/pug/pages/ui/login-form.pug
+++ b/src/pug/pages/ui/login-form.pug
@@ -10,7 +10,7 @@ block content
 		.title Форма входа в ЛК
 		.login
 			form.login-form
-				.login-form-title Вход
+				.login-form-title Войти
 				.login-form-subtitle
 					p.login-form-subtitle__text Еще нет аккаунта?						
 					a.login-form-subtitle__link(href="#") Зарегистрироваться
