--- a/src/less/blocks/_accordeon-job.less
+++ b/src/less/blocks/_accordeon-job.less
@@ -1,4 +1,5 @@
 .job-accordeon {
+	color:@textMenu;
 	.button-apply {
 		width: 312px;
 		margin-left: auto;
@@ -8,7 +9,7 @@
 
 .job-accordeon-item {
 	border:1px solid @textMenu;
-	font-style: 16px;
+	font-size: 16px;
 	margin-bottom: 8px;
 
 	@media @desktop {
@@ -23,7 +24,7 @@
 
 .job-accordeon-item__title {
 	padding:8px 56px 8px 16px;
-	font-style: 16px;
+	font-size: 16px;
 	position:relative;
 	cursor: pointer;
 
