color change and bread-crumbs font change

--- a/src/less/pages/job.less
+++ b/src/less/pages/job.less
@@ -34,7 +34,8 @@
 	padding-top: 12px;
 	padding-left: 8px;
 	padding-right: 8px;
-	margin-bottom: 36px;	
+	margin-bottom: 36px;
+	color:@textMenu;	
 	
 	@media @tablet {
 		padding-left: 0;
