--- a/src/less/blocks/_bread-crumb.less
+++ b/src/less/blocks/_bread-crumb.less
@@ -13,9 +13,13 @@
 	display: inline-block;
 	position: relative;
 	margin-right: 16px;
-	font-size: 16px;
+	font-size: 12px;
 	color: @btn-text-buy-click;
 	padding-top: @l1;
+
+	@media @desktop {
+		font-size: 16px;
+	}
 }
 .breadcrumb-item:not(:last-child):hover{
 	color: @text-red;
