--- a/src/less/blocks/_login-forms.less
+++ b/src/less/blocks/_login-forms.less
@@ -91,6 +91,7 @@
 	padding-right: 22px;
 	background-color: #fff;
 	color: @textMenu; 
+	min-width: 180px;
 	position: absolute;
 	left: 50%;
 	top: -16px;	
