--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -88,5 +88,6 @@
 			+linkLeftPanel("Спасибо за заказ", "../order-processed.html")
 			+linkLeftPanel("Профиль пользователя", "../account-profile.html")
 			+linkLeftPanel("Избранное", "../account-favourite.html")
+			+linkLeftPanel("Форма входа", "../login-page.html")
 
 #ui-nav-toggle Скрыть/Показать навигацию
