--- a/src/pug/pages/account-profile.pug
+++ b/src/pug/pages/account-profile.pug
@@ -14,11 +14,11 @@ block content
 				+breadcrumb-item('#', 'Личный кабинет')
 				+breadcrumb-item('#', 'Профиль')
 
-	//- Описание товара
+	//- Основной контент
 	.section-profile
-		//- .profile__title.title-1 ПРОФИЛЬ
 		.container
 			.row
+				//- Навигация
 				.col-md-3.col-lg-3.offset-xl-1.col-xl-2.col--no-padding
 					.account__navigation
 						ul.cabinet-menu
@@ -27,8 +27,10 @@ block content
 							+cabinet-menu-item('#', 'корзина')
 							+cabinet-menu-item('#', 'избранное')
 							+cabinet-menu-item('#', 'выйти')
+				//- Заголовок
 				.col-12.order-md-first
 					.profile__title.title-1 ПРОФИЛЬ
 				
+				//- Контактная информация
 				.offset-md-2.col-md-6.offset-lg-1.col-lg-4.offset-xl-1.col-xl-4
 					include ../sections/_contacts-profile.pug
