fixed scroll, height on ipad, on iPhone,
4. Исправлена работа скролла на iPad
5. Исправлено отображение высоты на iPhone5/SE

Добавлен скрипт на проверку количества товаров в корзине, если товары не переполняют корзину, то скролла нет. Сейчас корзина наполнена и есть скрол, если начать убирать товары, то скролл исчезает.

--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -1,11 +1,11 @@
 .goods-cart {
-	max-height: 80%;
-	overflow: auto;
+	min-height: 100%;
 	width: 321px;
 	margin-bottom: 88px;
 	padding-top: 16px;
 	@media @tablet {
 		width: 460px;
+		margin-bottom: 88px;
 	}
 }
 .clearfix{
