--- a/src/pug/layouts/page-layout/blur-wrapper.pug
+++ b/src/pug/layouts/page-layout/blur-wrapper.pug
@@ -7,7 +7,7 @@ html(lang="ru")
 		include ./_head.pug
 		
 	body(class=pageClass)
-		
+		include ../../pages/goods-cart-page.pug
 		.blur-wrapper
 			.header
 				include ../../sections/header.pug
