--- a/src/less/blocks/_goods-cart-page.less
+++ b/src/less/blocks/_goods-cart-page.less
@@ -1,7 +1,6 @@
 .goods-cart__page-bg {
-	display: none;
 	background-color: rgba(0, 0, 0, 0.25);
-	position: fixed;
+	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -10,17 +9,20 @@
 	display: none;
 }
 .goods-cart__page {
-	overflow: hidden;
 	height: 100vh;
+	overflow-y: auto;
+	overflow-x:hidden;
 	width: 321px;
-	position: fixed;
-	display: none;
+	position: absolute;
+	// display: none;
 	top: 0;
-	right: 0;
+	// right: 0;
+	right: -360px;
 	z-index: 1110;
 	background-color: @white;
+	transition: right 0.5s ease-in;
 	@media @tablet {
-		width: 460px;
+		width: 464px;
 	}
 }
 .goods-cart__title {
@@ -62,12 +64,13 @@
 	display: inline-block;
 }
 .goods-cart__footer {
-	position: absolute;
+	position: fixed;
 	bottom: 5px;
-	width: 100%;
+	width: 321px;
 	height: 88px;
 	@media @tablet {
 		bottom: 14px;
+		width: 461px;
 	}
 }
 .goods-cart__button {
@@ -77,6 +80,7 @@
 	text-align: center;
 	padding-top: 11px;
 	background-color: @white;
+	height: 100%;
 }
 .goods-cart__back-link-item {
 	line-height: normal;
