--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -12,4 +12,5 @@ script(src="js/city-selector.js")
 script(src="js/accordeon.js")
 script(src="js/form-order.js")
 script(src="js/modal-window.js")
+script(src="js/goods-cart.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
