--- a/src/pug/pages/password-recover-page.pug
+++ b/src/pug/pages/password-recover-page.pug
@@ -1,7 +1,7 @@
 extends ../layouts/page-layout/page.pug
 
 block variables
-	- var title = 'Форма входа в личный кабинет';
+	- var title = 'Восстановление пароля';
 	- var pageClass = 'index-page';
 
 block content
@@ -14,5 +14,5 @@ block content
 		.container
 			.row
 				.col-md-6.offset-md-3.col-lg-6.offset-lg-3.col-xl-4.offset-xl-4
-					include ../sections/login-form.pug		
+					include ../sections/password-recover.pug		
 		include ../sections/footer.pug
