--- a/src/pug/pages/ui/password-recover.pug
+++ b/src/pug/pages/ui/password-recover.pug
@@ -8,8 +8,8 @@ block content
 
 	.container.container--left
 		.title Восстановление пароля
-		.login
-			form.login-form.login-form--mb-0
+		.login.login--passw-recover
+			form.login-form.login-form--passw-recover
 				.login-form-title.login-form-title--mb-16 Восстановление пароля
 				.login-form-subtitle.login-form-subtitle--mb-20
 					p.login-form-subtitle__text.
