--- a/src/pug/sections/password-recover.pug
+++ b/src/pug/sections/password-recover.pug
@@ -1,5 +1,5 @@
-.login
-	form.login-form
+.login.login--passw-recover
+	form.login-form.login
 		.login-form-title.login-form-title--mb-16 Восстановление пароля
 		.login-form-subtitle.login-form-subtitle--mb-20
 			p.login-form-subtitle__text.
