page404 is done
404 страница. Анимированный грустный смайлик.

--- a/src/less/pages/page404.less
+++ b/src/less/pages/page404.less
@@ -1,20 +1,21 @@
 .page404-wrapper {
-	position: relative;
+	position: absolute;
 	height: 512px;
+	width: 100%;
 	padding-top: 44px;
 	@media @tablet {
-		height: 895px;
-		padding-top: 188px;
+		height: 305px;
+		padding-top: 155px;
 	}
 	@media @desktop {
-		height: 840px;
-		padding-top: 149px;
+		height: 409px;
+		padding-top: 49px;
 	}
 }
 .svg-container {
 	display: inline-block;
 	position: relative;
-	max-width:600px;  
+	// max-width:600px;
 	height:auto;
 	width: 100%;	
 	vertical-align: middle; 
@@ -22,9 +23,6 @@
 	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
-	@media @desktop {
-		width: 294px;
-	}
 }
 .page404__title {
 	line-height: 1;
@@ -81,6 +79,6 @@ svg.ldi-f17d8n {
     margin-right: auto;
     display: block;
     @media @desktop {
-    	width: 100%;
+    	width: 420px;
     }
 }
