--- a/src/pug/pages/ui/_page404.pug
+++ b/src/pug/pages/ui/_page404.pug
@@ -25,7 +25,7 @@
                       d:tags.ld.ld-swim-px(style='transform-origin: 50px 50px 0px; animation-duration: 1.3s; animation-delay: -0.56875s; animation-direction: normal;') dead face,hurt,wound,sad,heartbroken,die,death,sick,fail,emotion,feeling,emoji
                       d:license.ld.ld-swim-px(style='transform-origin: 50px 50px 0px; animation-duration: 1.3s; animation-delay: -0.4875s; animation-direction: normal;') cc-by
                       d:slug.ld.ld-swim-px(style='transform-origin: 50px 50px 0px; animation-duration: 1.3s; animation-delay: -0.40625s; animation-direction: normal;') f17d8n
-            //- style.ld.ld-swim-px(type='text/css', style='transform-origin: 50px 50px 0px; animation-duration: 1.3s; animation-delay: -0.325s; animation-direction: normal;').
+            style.ld.ld-swim-px(type='text/css', style='transform-origin: 50px 50px 0px; animation-duration: 1.3s; animation-delay: -0.325s; animation-direction: normal;').
               path,ellipse,circle,rect,polygon,polyline,line { stroke-width: 0; }@keyframes ld-swim-px {
               0% {
               -webkit-transform: translate(0, 0) rotate(0deg);
