--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -26,3 +26,7 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Описание товара
 					+button("Перейти", "product.html")
+			.col
+				.card.align-items-center.pb-35
+					.title-2 Страница 404
+					+button("Перейти", "page404.html")
