--- a/src/less/blocks/_login-forms.less
+++ b/src/less/blocks/_login-forms.less
@@ -15,6 +15,11 @@
 	margin-top: 4px;
 	padding-bottom: 58px;
 }
+.login--reg{
+	padding-bottom: 44px;
+	@media @tablet{padding-bottom: 68px;}
+	@media @desktop{padding-bottom: 40px;}
+}
 .login-form{
 	width: 100%;
 	color: @textMenu;
@@ -102,6 +107,12 @@
 	left: 50%;
 	top: -16px;	
 	transform: translateX(-50%);
+}
+.login-footer-title--reg{
+	min-width: 210px;
+}
+.contacts-text-small--reg{
+	@media @desktop{letter-spacing: -0.2px;}
 }
 .login-footer-content{
 	padding-top: 33px;
