--- a/src/pug/sections/registration-form.pug
+++ b/src/pug/sections/registration-form.pug
@@ -1,4 +1,4 @@
-.login
+.login.login--reg
 	form.login-form
 		.login-form-title Регистрация
 		.login-form-subtitle
@@ -10,10 +10,10 @@
 			+inputField('Повторить пароль', 'Вы ничего не ввели', 'pass', 'password', '', '')
 			
 		+button-apply('Регистрация', '#')
-		p.contacts-block-footer.contacts-text-small.text-left.
+		p.contacts-block-footer.contacts-text-small.contacts-text-small--reg.text-left.
 			Нажимая кнопку "Регистрация", вы соглашаетесь с #[a.contacts-link.contacts-link--small условиями оферты] и #[a.contacts-link.contacts-link--small политикой конфиденциальности.]
 	.login-footer
-		.login-footer-title Или зарегистрируйтесь
+		.login-footer-title.login-footer-title--reg Или зарегистрируйтесь
 				br
 				| через социальные сети
 		.login-footer-content
