--- a/src/pug/sections/login-form.pug
+++ b/src/pug/sections/login-form.pug
@@ -1,6 +1,6 @@
 .login
 	form.login-form
-		.login-form-title Вход
+		.login-form-title Войти
 		.login-form-subtitle
 			p.login-form-subtitle__text Еще нет аккаунта?						
 			a.login-form-subtitle__link(href="#") Зарегистрироваться
