--- a/src/less/pages/page404.less
+++ b/src/less/pages/page404.less
@@ -1,21 +1,19 @@
 .page404-wrapper {
 	position: absolute;
-	height: 512px;
+	height: 100vh;
 	width: 100%;
 	padding-top: 44px;
+	background-color: @bgc-404;
 	@media @tablet {
-		height: 305px;
 		padding-top: 155px;
 	}
 	@media @desktop {
-		height: 409px;
 		padding-top: 49px;
 	}
 }
 .svg-container {
 	display: inline-block;
 	position: relative;
-	// max-width:600px;
 	height:auto;
 	width: 100%;	
 	vertical-align: middle; 
