--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -44,3 +44,7 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Избранное
 					+button("Перейти", "account-favourite.html")
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Страница регистрации
+					+button("Перейти", "registration-page.html")
