--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -44,12 +44,12 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Избранное
 					+button("Перейти", "account-favourite.html")
-      .col-md-4.mb-30
-				.card.align-items-center.pb-35
-					.title-2 Ваканcии
-					+button("Перейти", "job.html")
-          
-       .col-md-4.mb-30
+			.col-md-4.mb-30
+					.card.align-items-center.pb-35
+						.title-2 Вакансии
+						+button("Перейти", "job.html")
+		.row
+			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Страница регистрации
 					+button("Перейти", "registration-page.html")
@@ -57,8 +57,5 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Форма авторизации
 					+button("Перейти", "login-page.html")
-			.col-md-4.mb-30
-				.card.align-items-center.pb-35
-					.title-2 Ваканcии
-					+button("Перейти", "job.html")
+
 
