add text-cursor for input

--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -24,7 +24,7 @@
 	width: 100%;
 	color: @active-checkbox;
 	padding-left: 15px;
-	cursor: pointer;
+	cursor: text;
 	&--success {
 		&:focus {
 			border: 1px solid @success;
