--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -48,3 +48,7 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Ваканcии
 					+button("Перейти", "job.html")
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Восстановление пароля
+					+button("Перейти", "password-recover-page.html")
