--- a/src/pug/pages/ui/buttons.pug
+++ b/src/pug/pages/ui/buttons.pug
@@ -60,3 +60,10 @@ block content
 			+button-more('Показать еще', '#')
 		pre.
 			+button-more('Показать еще', '#')
+
+		.section-ui
+			.ui-title Кнопка Прикрепить файл
+			+button-file('file', 'Прикрепить резюме')
+
+		pre.
+			+button-file('file', 'Прикрепить резюме')
