--- a/src/less/blocks/_buttons.less
+++ b/src/less/blocks/_buttons.less
@@ -1,5 +1,6 @@
 @border-btn-detail: 7px;
 @border-btn-radius: 4px;
+@border-btn-file: 50px;
 .button-cart {
 	display: block;
 	line-height: 1;
@@ -332,4 +333,50 @@
 	.button-more {
 		width: 472px;
 	}
+}
+
+.button-file {
+	color: @text-light-grey;
+	padding-top: 16px;
+	padding-bottom: 14px;
+	padding-left: 14px;
+	padding-right: 48px;
+	position: relative;
+	border: 1px solid @text-light-grey;
+	border-radius: @border-btn-file;
+	text-transform: uppercase;
+	font-size: 12px;
+	cursor: pointer;
+	letter-spacing: 0.4px;
+	&:hover {
+		background-color: @black;
+		border: 1px solid @black;
+		color: @white;
+		text-decoration: none;
+	}
+	&::after {
+		content: url('../img/icons/clip-for-button.svg');
+		width: 15px;
+		height: 16px;
+		position: absolute;
+		top: 12px;
+		right: 15px;
+	}
+}
+.button-file__input {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+.button-file_inner-caption {
+	line-height: 1;
+	font-size: 12px;
+	letter-spacing: 1px;
+	color: @file-caption;
+	padding-top: 8px;
+	padding-left: 5px;
+	font-style: italic;
 }
