--- a/src/less/main.less
+++ b/src/less/main.less
@@ -69,10 +69,9 @@
 @import "pages/product";
 @import "pages/account-favourite";
 @import "pages/account-profile";
-
 @import "pages/login-page";
-
 @import "pages/job";
+@import "pages/account-orders";
 
 
 
