--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -53,7 +53,7 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Страница регистрации
 					+button("Перейти", "registration-page.html")
-    .row    
+		.row
 			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Ваканcии
@@ -62,7 +62,12 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Восстановление пароля
 					+button("Перейти", "password-recover-page.html")
-      .col-md-4.mb-30
+			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Форма авторизации
 					+button("Перейти", "login-page.html")
+		.row
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Заказы пользователя
+					+button("Перейти", "account-orders.html")
