--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -100,6 +100,7 @@
 			+linkLeftPanel("Избранное", "../account-favourite.html")
 			+linkLeftPanel("Восстановление пароля", "../password-recover-page.html")
 			+linkLeftPanel("Вакансии", "../job.html")
+			+linkLeftPanel("Заказы пользователя в ЛК", "../account-orders.html")
 
 
 #ui-nav-toggle Скрыть/Показать навигацию
