--- a/src/less/blocks/_products-table.less
+++ b/src/less/blocks/_products-table.less
@@ -18,10 +18,12 @@
 	height: 48px;
 	border-bottom: 1px solid @color-line;
 	width: 20%;
-	@media @tablet{ padding-left: 8px;}
-	@media @desktop{ 
-		padding-top: 10px;
-		height: 54px; }
+	@media @tablet{ 
+		height: 54px; 
+		padding-left: 8px;}
+	@media @desktop{ padding-top: 10px;}
+		
+		
 }
 .products-table-row__cell:last-child{	
 	display: none;
@@ -81,7 +83,7 @@
 	color: @red;
 	text-decoration: none;
 }
-.products-table-row--header{	
+.products-table-row--header{		
 	font-weight: 700;
 	border-top: 1px solid @color-line;
 	& .products-table-row__cell	{
@@ -89,6 +91,7 @@
 		border-bottom: 2px solid @color-line;;
 	}
 	& .products-table-row__cell--link	{border-bottom-width: 0;}
+	@media @tablet{height: 56px;}
 }
 
 .thanks.thanks--table{
