--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -14,4 +14,5 @@ script(src="js/form-order.js")
 script(src="js/modal-window.js")
 script(src="js/goods-cart.js")
 script(src="js/products-table.js")
+script(src="js/profile-menu.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
