--- a/src/pug/sections/_products-table.pug
+++ b/src/pug/sections/_products-table.pug
@@ -5,12 +5,12 @@
 	.products-table-group
 		.products-table
 			+products-table-row('31.08.18', '5645', '12 380р.', '')
-				a.badge-order-status.badge-done(href="#") Выполнен
+				a.badge-order-status.badge-order-status--small.badge-done(href="#") Выполнен
 	
 	.products-table-group
 		.products-table
 			+products-table-row('31.08.18', '5645', '12 380р.', '')(class="products-table-row--open")
-				a.badge-order-status.badge-done(href="#") Принят
+				a.badge-order-status.badge-order-status--small.badge-done(href="#") Принят
 		.thanks.thanks--table
 			.thanks-header
 				.thanks-header__text Содержимое заказа
@@ -53,4 +53,4 @@
 	.products-table-group
 		.products-table
 			+products-table-row('31.08.18', '5645', '12 380р.', '')
-				a.badge-order-status.badge-red(href="#") Отменен
+				a.badge-order-status.badge-order-status--small.badge-red(href="#") Отменен
