--- a/src/less/pages/page404.less
+++ b/src/less/pages/page404.less
@@ -1,12 +1,10 @@
 .page404-wrapper {
-	// position: fixed;
-	// height: 100vh;
+	position: fixed;
 	top: 112px;
 	bottom: 0;
 	width: 100%;
 	padding-top: 44px;
 	background-color: @bgc-404;
-	overflow-y:  hidden;
 	@media @tablet {
 		padding-top: 155px;
 	}
@@ -16,8 +14,6 @@
 	}
 }
 .svg-container {
-	overflow-y:  hidden;
-	
 	display: inline-block;
 	position: relative;
 	// height:auto;
