--- a/src/pug/icons/page404.pug
+++ b/src/pug/icons/page404.pug
@@ -1,5 +1,5 @@
 .svg-container
-    svg.ldi-f17d8n(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 100 100', preserveaspectratio='xMidYMid', style='background: none;')
+    svg.svgsmile(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 200 200', preserveaspectratio='xMidYMid', style='background: none;')
       svg#Layer_1(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 100 100', style='transform-origin: 50px 50px 0px;', xml:space='preserve')
         g(style='transform-origin: 50px 50px 0px;')
           g(fill='rgb(88, 89, 91)', style='fill: rgb(88, 89, 91); transform-origin: 50px 50px 0px; transform: scale(0.6);')
