Удалил лишние комментарии

--- a/src/less/pages/page404.less
+++ b/src/less/pages/page404.less
@@ -9,34 +9,24 @@ body.page-404 {
 }
 
 .page404-wrapper {
-	// position: fixed;
-	// height: 100vh;
 	position: static;
 	flex-grow: 1;
-	top: 112px; // bottom: 0;
-	width: 100%; // padding-top: 44px;
+	top: 112px;
+	width: 100%;
 	background-color: @bgc-404;
 	overflow-y: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	@media @tablet {
-		// padding-top: 155px;
-	}
-	@media @desktop {
-		// padding-top: 49px;
-		// top: 195px;
-	}
 }
 
 .svg-container {
-	overflow-y: hidden; // display: inline-block;
-	position: relative; // height:auto;
-	width: 100%; // vertical-align: middle;
+	overflow-y: hidden;
 	position: relative;
-	overflow: hidden; // margin-left: auto;
-	// margin-right: auto;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
 	margin-top: -150px;
 }
 
@@ -49,9 +39,6 @@ body.page-404 {
 	text-transform: uppercase;
 	font-weight: 700;
 	padding-bottom: 16px;
-	@media @tablet {
-		// padding-top: 25px;
-	}
 	@media @desktop {
 		font-size: 40px;
 	}
@@ -63,7 +50,6 @@ body.page-404 {
 	text-align: center;
 	color: @text-light-grey;
 	border-bottom: 1px solid transparent;
-	
 	@media @mobile{
 		width: 360px;
 	}
@@ -94,17 +80,13 @@ body.page-404 {
 	@media @tablet {
 		width: 311px;
 	}
-
 	@media @desktop {
 		width: 430px;
 		margin-top: 0;
-		// padding-bottom: 55px;
 	}
 }
 
 svg.svgsmile {
-	// width: 400px;
-	// height: 400px;
 	width: 280px;
 	height: 280px;
 	margin-left: auto;
