--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -34,16 +34,12 @@
 
 
 
-
+			
+			+linkLeftPanel("Модальное окно - Вакансии", "job-modal.html")
 			+linkLeftPanel("Аккордеон - Вакансии", "accordeon-job.html")
-
 			+linkLeftPanel("Таблица продуктов", "products-table.html")
-
-
-
 			+linkLeftPanel("Контакты на странице Профиль", "profile-contacts.html")
 			+linkLeftPanel("Контакты на стр. Профиль", "contacts-for-profile.html")
-
 			+linkLeftPanel("Иконки", "icons.html")
 			+linkLeftPanel("Баннеры", "banner.html")
 			+linkLeftPanel("Кнопки", "buttons.html")
