Скрипт появление товаров при нажатии на строку.

--- a/src/less/blocks/_products-table.less
+++ b/src/less/blocks/_products-table.less
@@ -57,7 +57,7 @@
 	opacity: .8;
 }
 .products-table-row--open{
-	border-bottom: 2px solid @color-line;
+	// border-bottom: 2px solid @color-line;
 	background-color: @order-item-bg;
 
 		& .products-table-row__cell	{		
