--- a/src/less/main.less
+++ b/src/less/main.less
@@ -47,6 +47,7 @@
 @import "blocks/_goods-cart-page.less";
 @import "blocks/_login-forms.less";
 @import "blocks/_accordeon-job.less";
+@import "blocks/_job-modal.less";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
