--- a/src/pug/sections/accordeon-job.pug
+++ b/src/pug/sections/accordeon-job.pug
@@ -34,10 +34,10 @@
 				li Сменный график работы
 				li Оформление согласно ТК РФ
 
-			+button-apply('Отправить резюме', '#')
+			+button-apply('Отправить резюме', '#')(class="show-modal-window" data-modal='#job-modal')
 
 	.job-accordeon-item
-		.job-accordeon-item__title Продавец - кассир / г. Москва
+		.job-accordeon-item__title Продавец - кассир / г. Москва(class="show-modal-window")
 			.content-icon
 		.job-accordeon-item__content
 			.content__list-title Обязанности
@@ -72,7 +72,7 @@
 				li Сменный график работы
 				li Оформление согласно ТК РФ
 
-			+button-apply('Отправить резюме', '#')
+			+button-apply('Отправить резюме', '#')(class="show-modal-window" data-modal='#job-modal')
 
 	.job-accordeon-item
 		.job-accordeon-item__title Менеджер по работе с ключевыми клиентами / г. Москва
@@ -109,4 +109,4 @@
 				li Сменный график работы
 				li Оформление согласно ТК РФ
 
-			+button-apply('Отправить резюме', '#')
+			+button-apply('Отправить резюме', '#')(class="show-modal-window" data-modal='#job-modal')
