Убрал курсор pionter и уинпута

--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -8,17 +8,16 @@
 	}
 }
 
+
 /*
  *	Формы input
  */
-
 
 .input-field {
 	position: relative;
 	transition: 0.2s ease-in;
 	outline: none;
-	border: 1px solid @gray;
-	// line-height: 1px;
+	border: 1px solid @gray; // line-height: 1px;
 	font-size: 14px;
 	height: 40px;
 	width: 100%;
@@ -112,10 +111,8 @@
 	transition: 0.2s ease-in-out;
 	top: 21px;
 	left: 1em;
-	cursor: pointer;
 	@media @desktop {
 		top: 25px;
 		font-size: 16px;
 	}
 }
-
